--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-streamlit==1.39.0
-pandas==2.2.3
-PyMuPDF==1.24.9
-python-docx==1.1.2
-openpyxl==3.1.5
-reportlab==4.2.2
-matplotlib==3.9.2
-seaborn==0.13.2
-numpy==2.1.1
-beautifulsoup4==4.12.3
-requests==2.32.3
-docx2txt==0.8
+streamlit
+beautifulsoup4
+requests
+python-docx
+docx2txt
+PyMuPDF
+PyPDF2
