--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-streamlit
-beautifulsoup4
-requests
-python-docx
-docx2txt
-PyMuPDF
-PyPDF2
-openpyxl
-reportlab
-bs4
+streamlit==1.39.0
+pandas==2.2.3
+requests==2.32.3
+beautifulsoup4==4.12.3
+python-docx==1.1.2
+PyPDF2==3.0.1
+openpyxl==3.1.5
+reportlab==4.2.2
