--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ pandas==2.2.3
 requests==2.32.3
 beautifulsoup4==4.12.3
 python-docx==1.1.2
+docx2txt==0.8
+PyMuPDF==1.24.9
 PyPDF2==3.0.1
 openpyxl==3.1.5
 reportlab==4.2.2
